# unity_ros_teleoperation

./: .gitattributes  .gitignore  LICENSE  README.md
Assets/: msgbrowser_settings.asset
Assets/Components/Hands/HandModel/psyonic_ability_hand_model/: CMakeLists.txt  package.xml
Assets/Components/Hands/HandModel/psyonic_ability_hand_model/config/: gazebo_pid_gains.yaml  view.rviz
Assets/Components/Hands/HandModel/psyonic_ability_hand_model/launch/: standalone_gazebo.launch  standalone_rviz.launch
Assets/Components/Hands/HandModel/psyonic_ability_hand_model/model/meshes/: FB_palm_ref_MIR_1.asset  FB_palm_ref_MIR_CLEANED.stl  WRISTADAPTER.STEP  idx-F1.prefab  idx-F1_0.asset  idx-F1_1.asset  idx-F1_2.asset  idx-F1_3.asset  idx-F1_4.asset  idx-F1_5.asset  idx-F2.prefab  idx-F2_0.asset  idx-F2_1.asset  idx-F2_2.asset  thumb-F1-MIR.prefab  thumb-F1-MIR_0.asset  thumb-F1-MIR_1.asset  thumb-F2.prefab  thumb-F2_0.asset  thumb-F2_1.asset  wrist_mount.prefab  wrist_mount.stl  wrist_mount_0.asset
Assets/Components/Hands/HandModel/psyonic_ability_hand_model/model/urdf/: ability_hand_right.urdf.xacro  hand_standalone.urdf.xacro  hand_standalone_gazebo.urdf.xacro
Assets/Materials/: Default.mat  Glow.mat  floor flat.mat  floor.mat
Assets/Misc/: DepthShader.shader  TogglePassthrough.cs  colortest.cs  random.unity  shaderTest.unity  transparenttest.mat  zed.mat  zedshader.shadergraph
Assets/Prefabs/: Debug Canvas.prefab  DepthPlane.prefab  (+10 more)
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
docs/: quest.md  unity.md
(+279 files in other folders)
