<?xml version="1.0"?>
<package format="2">
  <name>psyonic_ability_hand_model</name>
  <version>0.0.0</version>
  <description>This package contains the model packages for ability hand</description>

  <maintainer email="mayun@ethz.ch">Yuntao Ma</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roboticsgroup_gazebo_plugins</exec_depend>
</package>
